# everwealth

./: .gitignore  Justfile  README.md  compose.yaml  package.json  pyproject.toml  tailwind.config.js  user.json
db/migrations/: 202607230001_create_users.sql  202607230002_create_otp.sql  202607230003_create_sessions.sql  202607230004_create_accounts.sql  202607230005_create_categories.sql  202607230006_create_budgets.sql  202607230007_create_assets.sql  202607230008_create_transactions.sql  202607230009_create_transaction_refreshes.sql  202607230010_port_go_features.sql
everwealth/: Justfile  api.py  config.py  db.py  lucy_config.py  main.py  migrate.py  models.py  plaid.py
everwealth/accounts/: __init__.py  hooks.py  models.py  web.py
everwealth/accounts/migrations/: create_account.sql  create_asset.sql
everwealth/auth/: __init__.py  events.py  middleware.py  tokens.py  web.py
everwealth/auth/models/: __init__.py  migrate.py  otp.py  session.py  sessions.py  users.py
everwealth/budgets/: __init__.py  events.py  models.py  rollover.py  web.py
everwealth/budgets/migrations/: create_budgets.sql  create_categories.sql
everwealth/budgets/models/: budgets.py  (+1 more)
everwealth/migrations/: port_go_features.sql
everwealth/settings/: __init__.py  migrations.py  models.py
everwealth/static/: 4-3.csv  input.css  styles.css  upload_template.csv
everwealth/templates/: 404.html  accounts.html  app.html  base.html  budgets.html  budgets2.html  categories.html  dashboard.html  header.html  index.html  layout.html  login.html  navbar.html  new-budget.html  transactions.html
everwealth/transactions/: __init__.py  handlers.py  hooks.py  migrations.py  models.py  plaid_sync.py  refresh_scheduler.py  web.py
everwealth/users/: __init__.py  migration.py  models.py
everwealth/web/: accounts.py  budget.py  dashboard.py  login.py  settings.py  transactions.py
tests/: test_auth_tokens.py  test_create_user.py
(+48 files in other folders)
