[tool.poetry]
name = "everwealth"
version = "0.1.0"
description = ""
authors = ["Travis Cammack <traviscammack@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.108.0"
black = "^23.12.1"
isort = "^5.13.2"
uvicorn = "^0.25.0"
jinja2 = "^3.1.2"
pydantic = "^2.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 100


[tool.isort]
profile = "black"
