[tool.poetry]
name = "everwealth"
version = "0.1.0"
description = ""
authors = ["Travis Cammack <traviscammack@protonmail.com>"]
readme = "README.md"

[tool.pylint.format]
max-line-length = 100

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.108.0"
black = "^23.12.1"
isort = "^5.13.2"
uvicorn = "^0.25.0"
jinja2 = "^3.1.2"
pydantic = "^2.5.3"
python-multipart = "^0.0.6"
email-validator = "^2.1.0.post1"
shortuuid = "^1.0.11"
bpython = "^0.24"
asyncpg = "^0.29.0"
pydantic-settings = "^2.1.0"
uvloop = "^0.19.0"
loguru = "^0.7.2"
lucette = {path = "../lucette", develop = true}
itsdangerous = "^2.2.0"
cryptography = "^42.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 100


[tool.isort]
profile = "black"
